# agent-zero-main

./: .gitignore  README.md  agent.py  main.py  models.py  prepare.py  pyproject.toml  requirements.txt
api/: api_message.py  image_get.py  notification_create.py
conf/: model_providers.yaml
docs/: README.md  quickstart.md
helpers/: api.py  defer.py  document_query.py  extract_tools.py  runtime.py  skills.py  state_migration.py  system_packages.py  task_scheduler.py  virtual_desktop.py  virtual_desktop_routes.py
prompts/: agent.system.main.communication.md  agent.system.skills.md  agent.system.skills.relevant.md  agent.system.tool.behaviour.md  agent.system.tool.call_sub.md  agent.system.tool.document_query.md  agent.system.tool.notify_user.md  agent.system.tool.scheduler.md  agent.system.tool.search_engine.md  agent.system.tool.skills.md  agent.system.tools.md  behaviour.merge.sys.md
tests/: test_a0_connector_prompt_gating.py  test_api_chat_lifetime.py  test_browser_agent_regressions.py  test_chat_compaction.py  test_default_prompt_budget.py  test_diff_viewer.py  test_document_query_fallback.py  test_download_toast_regressions.py  test_history_compression_wait.py  test_host_browser_connector.py  test_image_get_security.py  test_memory_cleanup.py  test_model_config_api_keys.py  test_model_config_switcher.py  test_model_search.py  test_oauth_codex.py  test_office_canvas_setup.py  test_office_desktop_state.py  test_office_document_affordance.py  test_office_document_store.py  test_office_wopi_store.py  test_onboarding_static.py  test_self_update_tag_filter.py  (+7 more)
(+269 files in other folders)
